Fix for alignment on main image

--- a/css/Ultimate.css
+++ b/css/Ultimate.css
@@ -136,12 +136,6 @@ blockquote {
     margin: auto;
 }
 
-.pic {
-    margin: auto;
-    max-width: 100%;
-    height: auto;
-    border-style: hidden;
-}
 
 .center {
     margin: auto;
